k8s/frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/playground-multi-agents/stupid-app-frontend
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 5000
