k8s/frontend-service-LoadBalancer.yaml
# This services exposes the frontend app directly over the internet
# type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: frontend
    tier: frontend
